corrected CmakeLists.txt first csv test for tem

--- a/hw3/src/CMakeLists.txt
+++ b/hw3/src/CMakeLists.txt
@@ -78,7 +78,11 @@ if(USE_FFT)
   target_link_libraries (particles fft_code)
   if (GTEST_FOUND)
     add_executable(test_fft test_fft.cc)
-    target_link_libraries(test_fft part ${GTEST_BOTH_LIBRARIES} ${FFT_LIBRARY} pthread)
+    target_link_libraries(test_fft part fft_code ${GTEST_BOTH_LIBRARIES} ${FFT_LIBRARY} pthread)
     gtest_discover_tests(test_fft)
+
+    add_executable(test_heat_equation test_heat_equation.cc)
+    target_link_libraries(test_heat_equation part fft_code ${GTEST_BOTH_LIBRARIES} ${FFT_LIBRARY} pthread)
+    gtest_discover_tests(test_fft test_heat_equation)
   endif()
 endif()
