gave file more appropriate name fixed minor bugs

--- a/hw-heateqn_pybind/src/CMakeLists.txt
+++ b/hw-heateqn_pybind/src/CMakeLists.txt
@@ -105,3 +105,7 @@ file(
   COPY ${CMAKE_CURRENT_SOURCE_DIR}/test_pybind.py
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/
   )
+file(
+  COPY ${CMAKE_CURRENT_SOURCE_DIR}/main.py
+  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/
+  )
