improved examples & documentation

--- a/hw3-particles/src/CMakeLists.txt
+++ b/hw3-particles/src/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.1)
 project (Particles)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
 add_library(part
   vector.cc
@@ -32,10 +33,8 @@ enable_testing()
 find_package(GTest)
 if (GTEST_FOUND)
 include_directories(${GTEST_INCLUDE_DIRS})
-add_executable(test_kepler test_kepler.cc)
 add_executable(test_pingpong test_pingpong.cc)
 message(${GTEST_LIBRARIES})
-target_link_libraries(test_kepler part ${GTEST_BOTH_LIBRARIES} pthread)
 target_link_libraries(test_pingpong part ${GTEST_BOTH_LIBRARIES} pthread)
 gtest_discover_tests(test_pingpong)
 endif()
